# ChannelOS

./: .latexmkrc  Cargo.toml  build.rs  final.tex  midterm.tex
scripts/: debug.gdb
src/: boot.rs  consts.rs  elf.rs  lang_items.rs  linker.ld  main.rs  prog.rs  provided.rs  sbi.rs  sched.rs  serial.rs  service.rs  timer.rs  trap.rs
src/mem/: addr.rs  mod.rs  paging.rs  set.rs
src/process/: mod.rs
user/: .gitignore  Makefile  linker.ld  putchar.c  stub.c  test.c
