[package]
name = "channel_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true

[dependencies]
align-data = "0.1.0"
bitflags = "1.3.2"
buddy_system_allocator = "0.8.0"
elf_rs = "0.2.0"
enum-repr = "0.2.6"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { path = "../riscv" }
spin = "0.9.4"
